[package]
name = "omnivixion"
version = "0.0.1"
edition = "2024"
publish = false

[dependencies]
wgpu = "23"
winit = "0.30"
bytemuck = { version = "1.18", features = ["derive"] }
glam = { version = "0.29", features = ["bytemuck"] }
pollster = "0.4"
anyhow = "1"
log = "0.4"
env_logger = "0.11"

[profile.dev]
opt-level = 1   # debug stays interactive at 128³

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
