[package]
name = "omnivixion"
version = "0.0.1"
edition = "2024"
publish = false

[dependencies]
wgpu = "23"
winit = "0.30"
bytemuck = { version = "1.18", features = ["derive"] }
glam = { version = "0.29", features = ["bytemuck"] }
pollster = "0.4"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
mlua = { version = "0.10", features = ["lua54", "vendored"] }
toml = "0.8"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
cpal = "0.15"

[profile.dev]
opt-level = 1   # debug stays interactive at 128³

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
